fix profile wrap

--- a/client/src/components/profile/profile/Profile.css
+++ b/client/src/components/profile/profile/Profile.css
@@ -52,6 +52,7 @@ margin: 0 0.3rem;
 
 .profile-about .skills {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -59,7 +60,7 @@ margin: 0 0.3rem;
 
 .profile-github > div:last-child {
   flex: 3;
-  flex-basis: 20%;
+  flex-basis: 30%;
 }
 
 .profile-exp {
